# pt-media-observatory

./: .env.example  .gitignore  Makefile  docker-compose.yml  index.html  infra-audit-report.md  nginx.conf
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  schema.sql
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/api/: auth.py  events.py  internal.py  submissions.py
backend/app/core/: STATE_MACHINE_VALIDATION.md  audit_logger.py  state_machine.py
backend/app/services/: coverage_analyzer.py  evidence_fetcher.py  kanban_sync.py  llm_client.py  risk_reviewer.py  stage_runner.py  writer_pt.py
backend/tests/: conftest.py  test_api.py  test_force_approve.py  test_ready_for_review.py
frontend/: Dockerfile  index.html  nginx-frontend.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: HoverRevealCards.css  HoverRevealCards.tsx  Navigation.tsx
frontend/src/pages/: DraftPreview.tsx  EventList.tsx  PublicationTracker.tsx  ReviewPanel.tsx  SubmissionForm.tsx
nginx/: nginx.conf
scripts/: poller.sh  start-all.sh
