[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pt-media-observatory-backend"
version = "0.1.0"
description = "PT Media Observatory backend"
authors = [{name = "PT Media Observatory", email = "dev@ptmediaobservatory.org"}]
main = "app/main.py"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.25.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "passlib[argon2]>=1.7.0"
]
dependencies-python = [
    "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
dev = "uvicorn.app.main:app --reload"
prod = "uvicorn.app.main:app --workers 4"
migrate = "alembic upgrade head"
start = "python -m gunicorn app.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", ".env"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]